--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable:no;">
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="sm.js"></script>
@@ -16,11 +16,6 @@
                     <option value="info_arrow=1">Info Arrow</option>
                     <option value="info=1">Info</option>
                 </select>
-                <!--
-                <input type="checkbox" class="sign-type" id="sign-arrow" data-field="arrow" checked /> <label for="sign-arrow">Arrow</label><br>
-                <input type="checkbox" class="sign-type" id="sign-info-arrow" data-field="info_arrow" checked/> <label for="sign-info-arrow">Info Arrow</label><br>
-                <input type="checkbox" class="sign-type" id="sign-info" data-field="info" checked /> <label for="sign-info">Info</label>
-                -->
             </div>
         </div>
     </body>
