Initial locate me

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     <body>
         <div id="map-wrapper">
             <div id="map"></div>
-            <div id="controls">
+            <div id="controls" class="control">
                 <select id="sign-select">
                     <option value="arrow=1">Arrow</option>
                     <option value="info_arrow=1">Info Arrow</option>
                     <option value="info=1">Info</option>
                 </select>
+            </div>
+            <div id="locate-me" class="control">
+                <input type="checkbox" id="locate-me-check" /> <label for="locate-me-check">Locate Me</label>
             </div>
         </div>
     </body>
