Default to All Signs

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <div id="map"></div>
             <div id="controls" class="control">
                 <select id="sign-select">
+                    <option value="">All Signs</option>
                     <option value="arrow=1">Arrow</option>
                     <option value="info_arrow=1">Info Arrow</option>
                     <option value="info=1">Info</option>
