New layer for Info + Info Arrow

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <option value="arrow=1">Arrow</option>
                     <option value="info_arrow=1">Info Arrow</option>
                     <option value="info=1">Info</option>
+                    <option value="info=1 OR info_arrow=1">Info + Info Arrow</option>
                 </select>
             </div>
             <div id="locate-me" class="control">
